--- a/Cargo.toml
+++ b/Cargo.toml
@@ -81,6 +81,7 @@ swash = { version = "0.2.1", default-features = false, features = [ "std"  ] }
 time = { version = "0.3.37", features = ["macros", "formatting"] }
 tokio = { version = "1.42.0", features = ["full"] }
 tokio-util = { version = "0.7.13", features = ["compat"] }
+once_cell = "1.19.0"
 toml = "0.8.19"
 tracy-client-sys = { version = "0.24.3", optional = true, default-features = false, features = [
     "broadcast",
